tests/test_typing/bad/err5.catala_en
> Include: common.catala_en

```catala
scope S:
  definition z equals [
    Structure { -- i: 3 -- e: Int content x };
    Structure { -- i: 4 -- e: y };
    1040
  ]
  definition a equals number of (z ++ z) / 2
```

```catala-test-inline
$ catala Typecheck
[ERROR] Error during typechecking, incompatible types:
--> integer
--> Structure

Error coming from typechecking the following expression:
 --> tests/test_typing/bad/err5.catala_en
  | 
7 |     Structure { -- i: 4 -- e: y };
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  + 

Type integer coming from expression:
 --> tests/test_typing/bad/err5.catala_en
  | 
8 |     1040
  |     ^^^^
  + 

Type Structure coming from expression:
 --> tests/test_typing/bad/err5.catala_en
  | 
7 |     Structure { -- i: 4 -- e: y };
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  + 
#return code 255#
```
